# vault-rag-eval

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  eval-cloud.yml
app/: Dockerfile  main.py
corpus/applied-cryptography/: digital-signatures.md  forward-secrecy.md  hashing-vs-encryption.md  key-derivation.md  nonces-and-ivs.md
corpus/build-and-release/: artifact-caching.md  blue-green-deploys.md  feature-flags.md  reproducible-builds.md  semantic-versioning.md
corpus/distributed-systems/: backpressure.md  consensus-protocols.md  idempotency-keys.md  leader-election.md  vector-clocks.md
corpus/networking/: dns-resolution.md  load-balancing.md  nat-traversal.md  tcp-congestion-control.md  tls-handshake.md
corpus/observability/: distributed-tracing.md  error-budgets.md  metric-cardinality.md  red-method.md  structured-logging.md
corpus/scheduling-and-time/: exponential-backoff.md  leap-seconds.md  monotonic-clocks.md  priority-queues.md  rate-limiting.md
corpus/storage-engines/: btree-vs-lsm.md  connection-pooling.md  mvcc-isolation.md  query-planning.md  (+1 more)
deploy/: README.md
docs/: demo-transcript.md  writeup.md
evals/: .gitignore  __init__.py  baseline.json  gold.jsonl  metrics.py  retrieve.py  run.py
fixtures/: demo_queries.json  index.jsonl  manifest.json
scripts/: __init__.py  denylist.sha256  denylist_scan.py  deploy_hf.py  make_fixtures.py  seed_stores.py  smoke.py
tests/: test_postgres_integration.py  test_provenance.py  test_stores.py  test_unit.py
(+24 files in other folders)
